Update Capstone 1 - Examining UTMB Results - Github.ipynb

--- a/Capstone 1 - Examining UTMB Results - Github.ipynb
+++ b/Capstone 1 - Examining UTMB Results - Github.ipynb
@@ -74,7 +74,7 @@
     "# TAKES DATA FROM .CSV FILES AND ADDS TO THE DATAFRAME\n",
     "for x in years:\n",
     "    # INTERATE THROUGH ALL THE DATA\n",
-    "    data = pd.read_csv('Thinkful-Capstone-1/utmb_20' + x + '.csv')\n",
+    "    data = pd.read_csv('https://github.com/CascadiaRunner/Thinkful-Capstone-1/blob/master/utmb_20' + x + '.csv')\n",
     "    \n",
     "    # CHANGES ALL NATIONALITY DATA TO UPPERCASE\n",
     "    data['nationality'] = data['nationality'].str.upper()\n",
@@ -414,7 +414,7 @@
     }
    ],
    "source": [
-    "pd.read_csv('Thinkful-Capstone-1/agecategories.csv')"
+    "pd.read_csv('https://github.com/CascadiaRunner/Thinkful-Capstone-1/blob/master/agecategories.csv')"
    ]
   },
   {
@@ -1187,7 +1187,7 @@
     "\n",
     "for x in years_without_12:\n",
     "    # INTERATE THROUGH ALL THE DATA\n",
-    "    data = pd.read_csv('Thinkful-Capstone-1/utmb_20' + x + '.csv')\n",
+    "    data = pd.read_csv('https://github.com/CascadiaRunner/Thinkful-Capstone-1/blob/master/utmb_20' + x + '.csv')\n",
     "    \n",
     "    # CHANGES ALL NATIONALITY DATA TO UPPERCASE\n",
     "    data['nationality'] = data['nationality'].str.upper()\n",
